GNOME Bugzilla – Bug 689259
gnutls: Fix regression where begin_handshake() is not called
Last modified: 2012-11-29 22:02:58 UTC
Seems like somewhere along the line the GTlsConnectionGnutls begin_handsake() virtual method is not being called anymore. This has various side-effects, such as servers not enforcing authentication-mode.
Created attachment 230161 [details] [review] gnutls: Fix regression where begin_handshake() is not called The begin_handshake() virtual method is no longer called. This results in stuff like the GTlsServerConnection authentication-mode not being passed to gnutls. Fix issue, and add tests which a future regression in this area should fall over.
Attachment 230161 [details] pushed as eb2029d - gnutls: Fix regression where begin_handshake() is not called