gnutls: Fix regression where begin_handshake() is not called

The begin_handshake() virtual method is no longer called. This results
in stuff like the GTlsServerConnection authentication-mode not being
passed to gnutls.

Fix issue, and add tests which a future regression in this area
should fall over.

https://bugzilla.gnome.org/show_bug.cgi?id=689259